--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-type"/>
     <title>
-      g2-react@1.0.0
+      g2-react@1.0.1
     </title>
     <link href="//os.alipayobjects.com/rmsportal/iUKcdtKUFtONTig.css" rel="stylesheet"/>
     <style type="text/css">
@@ -698,7 +698,7 @@
   <body>
     <div>
       <div class="header">
-        <h1>g2-react@1.0.0</h1>
+        <h1>g2-react@1.0.1</h1>
       </div>
       <div class="examples">
         <h3>EXAMPLES</h3>
@@ -814,7 +814,11 @@ $ npm run doc</code></pre></div><h2 id="license">License</h2>
       <div class="boxed-group md-wrapper" id="history">
         <h3>HISTORY.md</h3>
         <div class="markdown-body">
-          <h2 id="1-0-0">1.0.0</h2>
+          <h2 id="1-0-1">1.0.1</h2>
+<ul>
+<li>[fix] pkg.main path</li>
+</ul>
+<h2 id="1-0-0">1.0.0</h2>
 <ul>
 <li>let there be rc-g2</li>
 </ul>
