--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-type"/>
     <title>
-      g2-react@1.3.0
+      g2-react@1.3.1
     </title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <link href="//os.alipayobjects.com/rmsportal/iUKcdtKUFtONTig.css" rel="stylesheet"/>
@@ -701,7 +701,7 @@
   <body>
     <div>
       <div class="header">
-        <h1>g2-react@1.3.0</h1>
+        <h1>g2-react@1.3.1</h1>
       </div>
       <div class="examples">
         <h3>EXAMPLES</h3>
@@ -729,6 +729,12 @@
               <li>
                 <a href="./examples/pie.html">
                   pie
+                </a>
+              </li>
+            
+              <li>
+                <a href="./examples/use-frame.html">
+                  use-frame
                 </a>
               </li>
             
@@ -842,7 +848,11 @@ $ npm run doc</code></pre>
       <div class="boxed-group md-wrapper" id="history">
         <h3>HISTORY.md</h3>
         <div class="markdown-body">
-          <h2 id="1-3-0">1.3.0</h2>
+          <h2 id="1-3-1">1.3.1</h2>
+<ul>
+<li>[fix] allow data as G2.frame</li>
+</ul>
+<h2 id="1-3-0">1.3.0</h2>
 <ul>
 <li>[feat] support createG2((chart, configs)), read configs from <Chart configs={configs}>, <a href="https://github.com/antvis/g2-react/pull/24">!24</a></li>
 <li>[fix] legacy deps, <a href="https://github.com/antvis/g2-react/issues/39">#39</a></li>
